# Mousse

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json  support.md
.github/workflows/: build.yml
src/: CursorNode.cpp  CursorNode.hpp  main.cpp
